tests/e2e/semantics/head_const_output7.error
Error: syntax error in story at line 2, column 8

2|           res["foo"] = 2
             ^^^^^^^^^^^^

E0127: `res[]` is readonly and can not be assigned to.
