tests/e2e/semantics/head_const_output7.story
when client listen method:"post" path:"/foo" as res
       res["foo"] = 2
